# ultimate-python-project-tamplate

./: .pre-commit-config.yaml  LICENSE  README.MD  README.md  copier.yaml  docker-compose.yml  package-lock.json
{{ project_slug }}/: .gitignore  .pre-commit-config.yaml  LICENSE  README.md
{{ project_slug }}/.github/workflows/: auto-assign.yml  test.yml
{{ project_slug }}/backend/: Dockerfile  config.py  pyproject.toml  requirements.txt  settings.py
{{ project_slug }}/backend/app/: main.py
{{ project_slug }}/backend/app/api/: routes.py
{{ project_slug }}/backend/app/core/: logging_setup.py  scheduler.py
{{ project_slug }}/backend/app/db/: base.py
{{ project_slug }}/backend/app/services/: __init__.py  openai_client.py
{{ project_slug }}/backend/tests/: test_smoke.py
{{ project_slug }}/frontend/: README.md  package-lock.json  package.json  shadcn.config.js  vite.config.ts
{{ project_slug }}/frontend/frontend_project/: package-lock.json
{{ project_slug }}/frontend/frontend_project/src/: App.tsx
{{ project_slug }}/frontend/src/: App.tsx  main.tsx
{{ project_slug }}/scripts/: export_csv.py  generate_openapi.py  seed_data.py
